--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 2px solid black;
+    border: 2px solid rgb(117, 104, 104);
     padding: 20px 30px;
     border-radius: 12px;
 }
